# MDB

./: .env  .env.example  README.md  pyproject.toml
.kiro/specs/product-recommendation-engine/: .config.kiro  design.md  requirements.md  tasks.md
app/: __init__.py  main.py  models.py
app/api/: admin.py  behavior.py  recommendation.py  routes.py
app/core/: config.py  db.py  embedding.py  indexes.py  logging.py
app/pipeline/: extractor.py  loader.py  orchestrator.py  scheduler.py
app/pipeline/adapters/: __init__.py  odoo.py  vtm.py
frontend/: index.html
tests/integration/: test_pipeline.py  test_routes.py
tests/unit/: test_pipeline.py  test_recommendation.py
