[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "product-recommendation-engine"
version = "0.1.0"
description = "Personalized product recommendation engine using MongoDB Atlas Vector Search"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "motor==3.4.0",
    "pymongo==4.7.2",
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "sentence-transformers==2.7.0",
    "apscheduler==3.10.4",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
]

[project.optional-dependencies]
dev = [
    "hypothesis==6.100.1",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "mongomock==4.1.2",
    "httpx==0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"
